--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="continue_with_google">Continue with Google</string>
     <string name="login_with_google">Login with Google</string>
     <string name="register_with_google">Register with Google</string>
+    <string name="default_web_client_id">748693501422-l48tbjoob828u23ca06a9o6q3b7jjahr.apps.googleusercontent.com</string>
 </resources>
